# gitsage

./: .env.example  .gitignore  CHANGELOG.md  CTX.md  LICENSE  README.md  README_zh.md  pyproject.toml  scratch.md  test.md
.gitsage/skills/commit/: SKILL.md
docs/: design.md  interview_prep.md
gitsage/: __init__.py  cli.py  config.py  preferences.py  wizard.py
gitsage/agent/: __init__.py  catchup_agent.py  explain_agent.py  llm.py  models.py  prompts.py
gitsage/context/: __init__.py  blame.py  builder.py  ctx_reader.py  git_reader.py  memory.py
gitsage/harness/: __init__.py  hooks.py  override.py  quality_gate.py
gitsage/mcp/: __init__.py  server.py
gitsage/renderer/: __init__.py  interactive.py
gitsage/skills/: __init__.py  loader.py
scripts/: eval.py  eval_results.json
tests/: conftest.py  test_agent.py  test_catchup.py  test_config.py  test_context.py  test_explain_agent.py  test_harness.py  test_mcp.py  test_preferences.py  test_wizard.py
